<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/design_default_color_secondary_variant"
    tools:context=".CrearUsuarioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crearUsuario"
        android:layout_gravity="center"
        android:textSize="@dimen/tamañotitulo">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IngreseCorreo"
        android:layout_gravity="center"
        android:textSize="@dimen/TamañoInstrucciones">
    </TextView>

    <EditText
        android:id="@+id/correo_creacion_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/correo">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CrearContraseña"
        android:layout_gravity="center"
        android:textSize="@dimen/TamañoInstrucciones">
    </TextView>

    <EditText
        android:id="@+id/contraseña_creacion_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/contraseña">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/CrearUsuario"
        android:onClick="crearUsuario">
    </Button>

</LinearLayout>